ConfigObjectLoader: Add check for duplicate id